--- a/electron/package.json
+++ b/electron/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "csvtojson": "^2.0.8",
     "dateformat": "^3.0.3",
+    "electron-settings": "^3.2.0",
     "nedb": "^1.8.0",
     "yargs": "^12.0.5"
   }
