--- a/electron/package.json
+++ b/electron/package.json
@@ -2,7 +2,7 @@
   "name": "voter-manager",
   "version": "0.1.0",
   "description": "Manipulate voter data, generate various lists, record data",
-  "main": "serverMain.js",
+  "main": "./mainJS/serverMain.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/electron ."
