added Slides and some other small changes

--- a/electron/HowdyUniforum/package.json
+++ b/electron/HowdyUniforum/package.json
@@ -4,8 +4,8 @@
   "description": "Simple Uniforum Example",
   "main": "mainJS/serverMain.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    ,"start" : "electron mainJS/serverMain.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron mainJS/serverMain.js"
   },
   "keywords": [
     "example"
