--- a/electron/HowdyUniforum/package.json
+++ b/electron/HowdyUniforum/package.json
@@ -13,7 +13,10 @@
   "author": "Kent Archie",
   "license": "MIT",
   "devDependencies": {
-    "electron-packager": "^13.1.1",
-    "electron": "^9.4.0"
+    "electron": "^9.4.0",
+    "electron-packager": "^13.1.1"
+  },
+  "dependencies": {
+    "elecron": "*"
   }
 }
